# antifraud_system_v2

./: .gitignore  README.md  REPORT.md  mlflow.db  pyproject.toml
configs/: data_prep.yaml
configs/models/: lstm.yaml  meta_model.yaml  mlp.yaml  trees.yaml  vae.yaml
data/: creditcard.csv  data_download.py
data/predictions/: catboost_meta_test.npy  catboost_oof.npy  lightgbm_meta_test.npy  lightgbm_oof.npy  lstm_meta_test.npy  lstm_oof.npy  mlp_meta_test.npy  mlp_oof.npy  random_forest_meta_test.npy  random_forest_oof.npy  test_preds_catboost.npy  test_preds_lightgbm.npy  test_preds_lstm.npy  test_preds_mlp.npy  test_preds_random_forest.npy  test_preds_vae.npy  test_preds_xgboost.npy  vae_meta_test.npy  vae_oof.npy  xgboost_meta_test.npy  xgboost_oof.npy
data/processed/: README.md  README_CV_choice.md  README_PCA.md  generate_metadata.py  metadata.yaml
models/base/: catboost_final.joblib  mlp_final.pt  vae_final.pt
models/meta/: logreg_stacker.joblib
models/preprocessors/: preprocessor.joblib  vae_scaler.joblib
pipelines/: analyze_data.py  evaluate.py  generate_metadata.py  run_ablation.py  run_data_prep.py  run_inference.py  run_shap.py  run_test_prep.py  train_base_models.py  train_meta.py
reports/: data_analysis.txt
reports/ablation/: ablation_results.csv
reports/evaluation/: summary.txt
reports/shap/: SHAP.md
src/fd/data/: dataset.py  loaders.py  preprocessing.py  sequences.py
src/fd/models/: base_nets.py
src/fd/training/: PARAMETER TUNING ALGORITHMS.md  README_loss_function.md  engine.py  losses.py  vae_engine.py
(+6 files in other folders)
